# ChimpStackr

./: .gitignore  AppImageBuilder.yml  CONTRIBUTING.md  README.md  benchmark_gpu.py  chimpstackr.spec  index.md  org.flatpak.chimpstackr.yml  pyproject.toml  ref_AppImageBuilder.yml  requirements.txt  setup.cfg  setup.py  snapcraft.yaml
.claude/: settings.local.json
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build.yml  codeql-analysis.yml  python-app.yml  test-app.yml  test.yml
api_example/: chimb_stackr.py
docs/: algorithms.md  packaging.md
flatpak/: org.flatpak.chimpstackr.yml  runner.sh
modules/pyqtconfig/: LICENSE.md  __init__.py  config.py  qt.py
packaging/: chimpstackr.desktop  entitlements.plist  installer.iss
packaging/icons/: chimpstackr_icon.icns
scripts/: build_linux.sh  build_macos.sh  build_windows.ps1
snap/: snapcraft.json  snapcraft.yaml
snap/gui/: chimpstackr.desktop
snap/local/: icon_gimp.xcf
src/: ImageLoadingHandler.py  ImageViewer.py  __init__.py  _version.py  chimpstackr_cli.py  cli.py  command_line.py  config.py  run.py  settings.py  test.py  utilities.py
src/MainWindow/: ImageSavingDialog.py  ImageViewer.py  MainLayout.py  MainWindow.py  ProgressBar.py  QActions.py  RetouchWidget.py  SettingsWidget.py  StackSuccessDialog.py  Threading.py  TimeRemainingHandler.py  __init__.py  icons.py  style.py
src/MainWindow/MainLayout/: ImageViewer.py  ImageWidgets.py  MainLayout.py  __init__.py
src/MainWindow/MainLayout/ImageViewers/: ComparisonViewer.py  ImageRetouchScene.py  ImageScene.py  RetouchHelpers.py  __init__.py
src/algorithm/: API.py  ImageLoadingHandler.py  ProgressLoggingHandler.py  TimeRemainingHandler.py  algorithm.py  dft_imreg.py  image_storage.py  post_processing.py  pyramid.py  time_remaining_handler.py
src/algorithm/stacking_algorithms/: cpu.py  gpu.py  shared.py
src/algorithms/: API.py  ProgressLoggingHandler.py  __init__.py  dft_imreg.py  image_storage.py
src/algorithms/stacking_algorithms/: cpu.py  gpu.py
tests/: test_ImageLoadingHandler.py  test_TimeRemainingHandler.py  test_algorithm_API.py  test_cli.py
