[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "chimpstackr"
dynamic = ["version"]
description = "Open-source focus stacking application"
readme = "README.md"
license = "GPL-3.0-or-later"
requires-python = ">=3.9,<3.14"
dependencies = [
    "pyside6-essentials>=6.4.2,<7.0",
    "opencv-python-headless>=4.7,<5.0",
    "numpy>=1.23,<3.0",
    "numba>=0.56",
    "rawpy>=0.18",
    "imageio>=2.29",
    "pyfftw>=0.13",
    "scipy>=1.10",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pyinstaller>=6.0",
]
macos = [
    "pyobjc-framework-Cocoa>=9.0",
]

[project.scripts]
chimpstackr-cli = "src.cli:main"

[project.gui-scripts]
chimpstackr = "src.run:main"

[tool.setuptools.dynamic]
version = {attr = "src._version.__version__"}

[tool.setuptools.packages.find]
include = ["src*"]

[tool.setuptools.package-data]
"*" = ["*.png", "*.svg", "*.ico", "*.icns"]

[tool.pytest.ini_options]
testpaths = ["tests"]
