[metadata]
name = chimpstackr-noah-peeters
version = 0.0.1
author = Noah Peeters
author_email = apenz1.peeters@gmail.com
description = Focus stacking software
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/noah-peeters/ChimpStackr/
project_urls =
    Bug Tracker = https://github.com/noah-peeters/ChimpStackr/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src